# aoc2022

./: Cargo.toml  rustfmt.toml
input/: Cargo.toml
input/src/: lib.rs
src/: day.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
