[package]
name = "input"
version = "0.1.0"
authors = ["Jeff Davey <jeffdavey@submersion.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
attohttpc = "0.24.0"
config = "0.13.2"
url = "2.3.1"
